# intent-classifier

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  noxfile.py  pyproject.toml
dataset/: example_dataset.csv  train.csv
intent_classifier/: __init__.py  adapters.py  dataset.py  evaluate.py  inference.py  model.py  preprocessing.py  settings.py  train.py  utils.py
intent_classifier/artifacts/: .gitignore  changelog.yaml
intent_classifier/config/: model_config.yaml  settings.yaml  train_config.yaml
notebooks/: dataset_preparation.ipynb  model_training.ipynb
tests/: test_dataset.py  test_inference.py  test_model.py  test_settings.py  test_train.py
