[project]
name = "intent-classifier"
version = "0.1.0"
description = "Spanish multi-head intent classifier with configurable heads and ONNX inference."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "onnxruntime-tools>=1.7",
    "onnxscript>=0.2",
    "optuna>=3.6",
    "pandas>=2.2",
    "protobuf>=4.25",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "scikit-learn>=1.5",
    "sentencepiece>=0.2",
    "torch>=2.3",
    "tiktoken>=0.7",
    "tqdm>=4.66",
    "transformers>=4.42",
]

[project.optional-dependencies]
dev = [
    "nox>=2025.5",
    "pytype>=2024.10",
    "pytest>=8.2",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["intent_classifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
